--- a/.gitignore
+++ b/.gitignore
@@ -1,1 +1,2 @@
 NeuralNetwork.xcodeproj/xcuserdata/pbardea.xcuserdatad/xcdebugger/Breakpoints_v2.xcbkptlist
+NeuralNetwork.xcodeproj/project.xcworkspace/xcuserdata/
