--- a/NeuralNetwork.xcodeproj/xcshareddata/xcschemes/NNTests.xcscheme
+++ b/NeuralNetwork.xcodeproj/xcshareddata/xcschemes/NNTests.xcscheme
@@ -17,8 +17,8 @@
             <BuildableReference
                BuildableIdentifier = "primary"
                BlueprintIdentifier = "9FAC51D91C2E57A200A2DF83"
-               BuildableName = "NNTests.xctest"
-               BlueprintName = "NNTests"
+               BuildableName = "NeuralNetworkTests.xctest"
+               BlueprintName = "NeuralNetworkTests"
                ReferencedContainer = "container:NeuralNetwork.xcodeproj">
             </BuildableReference>
          </TestableReference>
