--- a/NeuralNetwork.xcodeproj/xcshareddata/xcschemes/NeuralNetwork.xcscheme
+++ b/NeuralNetwork.xcodeproj/xcshareddata/xcschemes/NeuralNetwork.xcscheme
@@ -26,8 +26,19 @@
       buildConfiguration = "Debug"
       selectedDebuggerIdentifier = "Xcode.DebuggerFoundation.Debugger.LLDB"
       selectedLauncherIdentifier = "Xcode.DebuggerFoundation.Launcher.LLDB"
-      shouldUseLaunchSchemeArgsEnv = "YES">
+      shouldUseLaunchSchemeArgsEnv = "YES"
+      codeCoverageEnabled = "YES">
       <Testables>
+         <TestableReference
+            skipped = "NO">
+            <BuildableReference
+               BuildableIdentifier = "primary"
+               BlueprintIdentifier = "9FAC51D91C2E57A200A2DF83"
+               BuildableName = "NeuralNetworkTests.xctest"
+               BlueprintName = "NeuralNetworkTests"
+               ReferencedContainer = "container:NeuralNetwork.xcodeproj">
+            </BuildableReference>
+         </TestableReference>
       </Testables>
       <MacroExpansion>
          <BuildableReference
